# insta-chatbot

./: .gitignore  README.md  pyproject.toml  ruff.toml
app/: main.py
app/adapters/: files.py  instagram_auth.py  instagram_client.py  repository.py
app/api/: dependencies.py
app/api/v1/: agent.py
app/domain/: agent.py  errors.py  ports.py
app/infrastructure/: config.py  db_models.py  logger.py
templates/: layout.html
tests/domain/: test_agent.py
