[project]
name = "agentic-instagram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiograpi>=1.10.26",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.15.0",
    "dishka>=1.10.1",
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.0.0",
    "pyotp>=2.10.0",
    "sqlalchemy>=2.0.49",
    "xai-sdk>=1.17.0",
]
[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
]
lint = [
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
